test/arrays/bradc/assignArithArrToDom.chpl
var D = {1..10, 1..10};
var D2 = D;
var A: [D] real;

D = A;
